# coderef

./: .coderef.jsonc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: README.md  ci.yml  marketplace.yml  npm_publish.yml  release.yml  vscode_marketplace.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
crates/coderef-cli/: Cargo.toml
crates/coderef-cli/src/: help.rs  main.rs
crates/coderef-core/: Cargo.toml
crates/coderef-core-wasm/: Cargo.toml
crates/coderef-core-wasm/src/: lib.rs
crates/coderef-core/src/: anchor.rs  category.rs  commit_msg.rs  error.rs  lib.rs  reference.rs  severity.rs
crates/coderef-core/src/check/: mod.rs
crates/coderef-core/src/comment/: detector.rs  languages.rs  markdown.rs  mod.rs  region.rs
crates/coderef-core/src/config/: mod.rs  pattern.rs  resolve.rs  scope.rs  verify.rs
crates/coderef-core/src/doctor/: checks.rs  mod.rs
crates/coderef-core/src/explain/: mod.rs
crates/coderef-core/src/ifchange/: diff.rs  mod.rs  parse.rs  verify.rs
crates/coderef-core/src/pattern/: mod.rs
crates/coderef-core/src/scan/: file.rs  mod.rs  workspace.rs
crates/coderef-core/src/variables/: mod.rs  syntax.rs
crates/coderef-core/src/verify/: http.rs  local.rs  mod.rs
crates/coderef-core/tests/: anchor_verification.rs  block_markers.rs  check_pipeline.rs  config_load.rs  doctor_pipeline.rs  ifchange_changes.rs  scan_workspace.rs
crates/coderef-core/tests/fixtures/: minimal.coderef.jsonc  two_patterns.coderef.jsonc
docs/: README.md  release.md  test-plan.md
examples/: block-markers.coderef.jsonc  minimal.coderef.jsonc
extension/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
extension/scripts/: bundle-wasm.cjs
extension/src/: __test_setup.ts  __vscode_mock.ts  commands.test.ts  commands.ts  configLoader.ts  extension.ts  providers.test.ts  providers.ts  referenceCache.ts  referencesView.test.ts  referencesView.ts  textOffset.test.ts  textOffset.ts  wasmEngine.ts
extension/src/test/runtime/: extension.test.ts
extension/src/test/runtime/fixtures/workspace/: .coderef.jsonc  sample.rs
npm/coderef/: README.md  install.js  package.json
schema/: README.md  coderef.schema.json
tools/: align-md-tables.py  validate-config.py
