[workspace]
resolver = "2"
members = [
    "crates/coderef-core",
    "crates/coderef-cli",
]

[workspace.package]
version    = "0.0.0"
edition    = "2021"
rust-version = "1.82"
license    = "Apache-2.0"
repository = "https://github.com/helly25/coderef"
homepage   = "https://github.com/helly25/coderef"
authors    = ["Marcus Boerger (helly25)"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# Allowlist for pedantic lints that are too noisy for now.
module_name_repetitions = "allow"
must_use_candidate      = "allow"

[profile.release]
lto       = "thin"
codegen-units = 1
strip     = "symbols"
opt-level = 3
