[package]
name         = "coderef-cli"
description  = "CLI binary for coderef"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "coderef"
path = "src/main.rs"

[dependencies]
coderef-core = { path = "../coderef-core" }
serde_json   = { workspace = true }
