[package]
name         = "coderef-core"
description  = "Core engine for coderef: config, variables, regex scanner, resolver, verifier"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[lib]
name = "coderef_core"

[[bin]]
name              = "coderef-gen-schema"
path              = "src/bin/gen_schema.rs"
required-features = []

[features]
default = []
# wasm build target. Stubs out std::process / std::env / fs walking on the
# wasm32 target so the same crate compiles to a no-I/O library suitable for
# in-process editor embedding (DESIGN.md §14.5.1).
wasm    = []

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
jsonc-parser = { workspace = true }
schemars     = { workspace = true }
fancy-regex  = { workspace = true }
thiserror    = { workspace = true }
indexmap     = { workspace = true }

# Host-only deps (excluded from wasm32 builds via cfg gating on the
# modules that use them).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ignore       = { workspace = true }
